--- a/public/index.html
+++ b/public/index.html
@@ -4,22 +4,46 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Fullstack App" />
-    <title>Fullstack App</title>
+
+    <title>DevSites404 | Custom Web & React App Development</title>
+    <meta
+      name="description"
+      content="Professional full-stack development services specializing in custom websites and high-performance React applications. Get a 2-week turnaround on your project."
+    />
+    <meta
+      name="keywords"
+      content="React developer, full-stack developer, web development, custom websites, React applications, Express.js, web design"
+    />
+    <meta name="author" content="DevSites404" />
+
+    <link rel="icon" href="%PUBLIC_URL%/fav.ico" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.devsites404.com/" />
+    <meta
+      property="og:title"
+      content="DevSites404 | Custom Web & React App Development"
+    />
+    <meta
+      property="og:description"
+      content="High-performance React applications and custom websites with a 2-week turnaround."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/og-preview.jpg" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.devsites404.com/" />
+    <meta
+      property="twitter:title"
+      content="DevSites404 | Custom Web & React App Development"
+    />
+    <meta
+      property="twitter:description"
+      content="High-performance React applications and custom websites with a 2-week turnaround."
+    />
+    <meta property="twitter:image" content="%PUBLIC_URL%/og-preview.jpg" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
